--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -123,10 +123,7 @@ Robin:
   \item Introduction.
   \item Make pictures! 
   \begin{itemize}
-    \item Graphical language of monoidal categories, and for \Pio.
-    \item Trace.  
-    \item Iterator, iterator unfolding axiom.
-    \item Trace from iterator.
+    \item Hasegawa trace from iterator.
   \end{itemize}
   \item Conclusion
   \begin{itemize}
