More TODO stuff!

--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -141,7 +141,8 @@ Niccolò:
   \item Fix the syntax to be closer to ordinary presentations (but do describe 
   how it is realized in Agda).
   \item Finish the section about trace and iteration.
-  \item Remind the reader about double lines of coinductive definitions. 
+  \item Remind the reader about double lines of coinductive definitions.
+  \item Swap types in Elgot iterator.
 \end{itemize}
 Both:
 \begin{itemize}
