Added a bunch of references, introduction.

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -173,12 +173,170 @@ year = {2003}
 
 @inproceedings{Hasegawa97,
   author    = {Masahito Hasegawa},
-  title     = {Recursion from Cyclic Sharing: Traced Monoidal Categories and Models
-               of Cyclic Lambda Calculi},
-  booktitle = {Typed Lambda Calculi and Applications, Third International Conference
-               on Typed Lambda Calculi and Applications, {TLCA} '97, Nancy, France,
-               April 2-4, 1997, Proceedings},
+  title = {Recursion from Cyclic Sharing: Traced Monoidal Categories and Models
+           of Cyclic Lambda Calculi},
+  booktitle = {Typed Lambda Calculi and Applications, Third International
+               Conference on Typed Lambda Calculi and Applications, {TLCA} '97, 
+               Nancy, France, April 2-4, 1997, Proceedings},
   pages     = {196--213},
   year      = {1997},
   doi       = {10.1007/3-540-62688-3\_37}
   }
+
+@article{KaarsgaardAG17,
+author = {Kaarsgaard, Robin and Axelsen, Holger Bock and Glück, Robert},
+title = {Join inverse categories and reversible recursion},
+journal = {Journal of Logical and Algebraic Methods in Programming},
+volume = {87},
+number = {},
+pages = {33--50},
+year = {2017},
+}
+
+@article{KaarsgaardG18,
+author={Kaarsgaard, R. and Gl\"{u}ck, R.},
+title={A categorical foundation for structured reversible flowchart languages: {S}oundness and adequacy},
+journal={Logical Methods in Computer Science},
+volume={14},
+number={3},
+pages={1--38},
+year={2018}
+}
+
+@article{Landauer61,
+author = {Landauer, Rolf},
+journal = {IBM Journal of Research and Development},
+number = {3},
+pages = {261--269},
+title = {{Irreversibility and heat generation in the computing process}},
+volume = {5},
+year = {1961}
+}
+
+@article{Bennett73,
+Author = {Charles H. Bennett},
+journal = {IBM Journal of Research and Development},
+Pages = {525--532},
+Title = {Logical reversibility of computation},
+Volume = {17},
+number={6},
+Year = {1973}
+}
+
+@article{SchultzLE18, 
+title={Modelling reversible execution of robotic assembly}, 
+volume={36}, 
+number={5}, 
+journal={Robotica}, 
+publisher={Cambridge University Press}, 
+author={Laursen, J.~S. and Ellekilde, L.-P. and Schultz, U.~P.}, 
+year={2018}, 
+pages={625–654}
+}
+
+@inproceedings{Schultz18,
+author={Schultz, U.~P.},
+title={Reversible Object-Oriented Programming with Region-Based Memory
+Management},
+editor={Kari, J. and Ulidowski, I.},
+booktitle={Proceedings of the 10th International Conference on Reversible
+Computation (RC 2018)},
+series={Lecture Notes in Computer Science},
+volume={11106},
+pages={322--328},
+year={2018},
+publisher={Springer-Verlag}
+}
+
+@inproceedings{Schordan15,
+  author = {Markus Schordan and David Jefferson and Peter Barnes and Tomas Oppelstrup and Daniel Quinlan},
+  title = {Reverse Code Generation for Parallel Discrete Event Simulation},
+  booktitle = {RC 2015},
+  editor = {Krivine, Jean and Stefani, Jean-Bernard},
+  series = {Lecture Notes in Computer Science},
+  volume = {9138},
+  pages = {95--110},
+  publisher = {Springer},
+  location = {Heidelberg},
+  year = {2015}
+}   
+
+@article{RendelO10,
+author = {Rendel, Tillmann and Ostermann, Klaus},
+journal = {ACM SIGPLAN Notices},
+number = {11},
+pages = {1--12},
+title = {{Invertible Syntax Descriptions: Unifying Parsing and Pretty Printing}},
+volume = {45},
+year = {2010}
+}
+
+@inproceedings{YokoyamaG07,
+  author = {Yokoyama, Tetsuo and Gl{\"u}ck, Robert},
+  title  = {A Reversible Programming Language and its Invertible Self-interpreter},
+  booktitle = {Partial Evaluation and Program Manipulation. Proceedings},
+  OPTeditor={},
+  pages = {144--153},
+  year = {2007},
+  publisher = {ACM},
+}
+
+@misc{JamesS14,
+author = {James, Roshan P. and Sabry, Amr},
+booktitle = {Reversible Computation},
+file = {:Users/robin/Dropbox/Artikler/James & Sabry - Theseus\; A high level language for reversible computing.pdf:pdf},
+title = {Theseus: {A} High Level Language for Reversible Computing},
+note = {Work-in-progress report at RC 2014, available at \url{https://www.cs.indiana.edu/~sabry/papers/theseus.pdf}.},
+year = {2014}
+}
+
+@inproceedings{JamesS12,
+ author = {James, Roshan P. and Sabry, Amr},
+ title = {Information Effects},
+ booktitle = {Proceedings of the 39th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '12},
+ year = {2012},
+ pages = {73--84},
+ publisher = {ACM}
+} 
+
+@book{DeVos10,
+author = {de Vos, Alexis},
+publisher = {Wiley-VCH Verlag},
+title = {{Reversible Computing: Fundamentals, Quantum Computing, and Applications}},
+year = {2010}
+}
+
+@inproceedings{ThomsenAG11,
+ author = {Thomsen, Michael Kirkedal and Axelsen, Holger Bock and Gl\"{u}ck, 
+ Robert},
+ title = {A Reversible Processor Architecture and Its Reversible Logic Design},
+ booktitle = {Proceedings of the Third International Conference on Reversible 
+ Computation},
+ editor={De Vos, Alexis and Wille, Robert},
+ series = {Lecture Notes in Computer Science},
+ volume={7165},
+ pages = {30--42},
+ publisher = {Springer-Verlag},
+ year = {2012},
+}
+
+@InProceedings{JacobsenKT18,
+author={Jacobsen, Petur Andrias H{\o}jgaard and Kaarsgaard, Robin and Thomsen,
+Michael Kirkedal},
+editor={Kari, Jarkko and Ulidowski, Irek},
+title={{$\mathsf{CoreFun}$}: A Typed Functional Reversible Core Language},
+booktitle={Reversible Computation, 10th International Conference, RC 2018, Leicester, UK, September 12-14, 2018, Proceedings},
+series={Lecture Notes in Computer Science},
+volume={11106},
+pages={304--321},
+publisher={Springer},
+year={2018}
+}
+
+@phdthesis{Karvonen19,
+author={Karvonen, Martti},
+title={The Way of the Dagger},
+school={School of Informatics, University of Edinburgh},
+year={2019}
+}
