working on dagger trace

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -182,3 +182,43 @@ year = {2003}
   year      = {1997},
   doi       = {10.1007/3-540-62688-3\_37}
   }
+
+@article{GoncharovMR16,
+  author    = {Sergey Goncharov and
+               Stefan Milius and
+               Christoph Rauch},
+  title     = {Complete Elgot Monads and Coalgebraic Resumptions},
+  journal   = {Electr. Notes Theor. Comput. Sci.},
+  volume    = {325},
+  pages     = {147--168},
+  year      = {2016},
+  doi       = {10.1016/j.entcs.2016.09.036}
+}
+
+@inproceedings{GoncharovSRP17,
+  author    = {Sergey Goncharov and
+               Lutz Schr{\"{o}}der and
+               Christoph Rauch and
+               Maciej Pir{\'{o}}g},
+  title     = {Unifying Guarded and Unguarded Iteration},
+  booktitle = {Foundations of Software Science and Computation Structures - 20th
+               International Conference, {FOSSACS} 2017, Held as Part of the European
+               Joint Conferences on Theory and Practice of Software, {ETAPS} 2017,
+               Uppsala, Sweden, April 22-29, 2017, Proceedings},
+  pages     = {517--533},
+  year      = {2017},
+  doi       = {10.1007/978-3-662-54458-7\_30}
+}
+
+@article{GoncharovSRJ18,
+  author    = {Sergey Goncharov and
+               Lutz Schr{\"{o}}der and
+               Christoph Rauch and
+               Julian Jakob},
+  title     = {Unguarded Recursion on Coinductive Resumptions},
+  journal   = {Logical Methods in Computer Science},
+  volume    = {14},
+  number    = {3},
+  year      = {2018},
+  doi       = {10.23638/LMCS-14(3:10)2018}
+}
