--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -378,3 +378,47 @@ author={Karvonen, Martti},
 title={The Way of the Dagger},
 school={School of Informatics, University of Edinburgh},
 year={2019}
+
+@inproceedings{Agda,
+	author    = {Ulf Norell},
+	title     = {{Dependently Typed Programming in Agda}},
+	booktitle = {Proceedings of TLDI'09: 2009 {ACM} {SIGPLAN} International Workshop
+	on Types in Languages Design and Implementation, Savannah, GA, USA,
+	January 24, 2009},
+	pages     = {1--2},
+	year      = {2009},
+}
+
+@inproceedings{Danielsson12,
+  author    = {Nils Anders Danielsson},
+  title     = {Operational semantics using the partiality monad},
+  booktitle = {{ACM} {SIGPLAN} International Conference on Functional Programming,
+               ICFP'12, Copenhagen, Denmark, September 9-15, 2012},
+  pages     = {127--138},
+  year      = {2012},
+  doi       = {10.1145/2364527.2364546}
+}
+
+@inproceedings{BentonKV09,
+  author    = {Nick Benton and
+               Andrew Kennedy and
+               Carsten Varming},
+  title     = {Some Domain Theory and Denotational Semantics in Coq},
+  booktitle = {Theorem Proving in Higher Order Logics, 22nd International Conference,
+               TPHOLs 2009, Munich, Germany, August 17-20, 2009. Proceedings},
+  pages     = {115--130},
+  year      = {2009},
+  doi       = {10.1007/978-3-642-03359-9\_10}
+}
+
+@inproceedings{AbelC14,
+  author    = {Andreas Abel and
+               James Chapman},
+  title     = {Normalization by Evaluation in the Delay Monad: {A} Case Study for
+               Coinduction via Copatterns and Sized Types},
+  booktitle = {Proceedings 5th Workshop on Mathematically Structured Functional Programming,
+               MSFP@ETAPS 2014, Grenoble, France, 12 April 2014.},
+  pages     = {51--67},
+  year      = {2014},
+  doi       = {10.4204/EPTCS.153.4}
+}
